--- a/2ndSemesterProject/.classpath
+++ b/2ndSemesterProject/.classpath
@@ -6,5 +6,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/rasmu/Downloads/jars/jars/mssql-jdbc-12.4.1.jre11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rasmu/Downloads/jars/jars/mssql-jdbc-12.4.1.jre11-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rasmu/Downloads/jars/jars/mssql-jdbc-12.4.1.jre8-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rasmu/Downloads/jars/jars/mssql-jdbc-12.4.1.jre8-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rasmu/Downloads/jars/jars/mssql-jdbc-12.4.1.jre8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rasmu/Downloads/jars/jars/mssql-jdbc-12.4.1.jre11-javadoc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
